test_files/bad/bad_if.ru
def A "aaa" "bbb"
def B "ccc" "eee"

if A and "aaa" or "eee" xor "fff" then X